Updated documentation to include airport and airline in get list request
